# shell-sync

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.sh
contrib/: com.shell-sync.client.plist  com.shell-sync.server.plist  shell-sync-client.service  shell-sync-server.service
crates/shell-sync-cli/: Cargo.toml
crates/shell-sync-cli/src/: cli.rs  main.rs
crates/shell-sync-client/: Cargo.toml
crates/shell-sync-client/src/: commands.rs  daemon.rs  discovery.rs  lib.rs  offline.rs  registration.rs  shell_writer.rs  socket_listener.rs  stats_proxy.rs
crates/shell-sync-core/: Cargo.toml
crates/shell-sync-core/src/: config.rs  db.rs  encryption.rs  hooks.rs  lib.rs  models.rs  protocol.rs  secrets.rs  shell.rs  stats.rs
crates/shell-sync-server/: Cargo.toml  build.rs
crates/shell-sync-server/src/: api.rs  git_backup.rs  lib.rs  mdns.rs  server.rs  ws.rs
crates/shell-sync-tui/: Cargo.toml
crates/shell-sync-tui/src/: app.rs  input.rs  lib.rs  search.rs  ui.rs
docs/plans/: 2026-02-11-api-import-tests.md  2026-02-11-atuin-features-design.md
migrations/: v1_from_node.sql
web-ui/: index.html  package-lock.json  package.json
web-ui/src/: api.js  app.jsx  style.css
web-ui/src/pages/: aliases.jsx  conflicts.jsx  dashboard.jsx  history.jsx  machines.jsx  settings.jsx  stats.jsx
