[package]
name = "shell-sync-client"
version.workspace = true
edition.workspace = true

[dependencies]
shell-sync-core = { path = "../shell-sync-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
mdns-sd = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
gethostname = "1"
comfy-table = { workspace = true }
libc = "0.2"
http = "1"
